--- a/client/view-all-shopping-lists.html
+++ b/client/view-all-shopping-lists.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Add Shopping List</title>
+    <title>View All Shopping List</title>
 </head>
 
 <body>
@@ -28,25 +28,17 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="add-shopping-list.html">Add Shopping List</a>
-                    <a class="nav-item nav-link" href="./add-shopping-list.html">Add Grocery Item</a>
+                    <a class="nav-item nav-link" href="./add-shopping-list.html">Add Shopping List</a>
+                    <a class="nav-item nav-link" href="./view-all-shopping-lists.html">Add Grocery Item</a>
 
                 </div>
             </div>
         </nav>
 
+        <ul class="list-group" id="shoppingListUL">
 
-        <form>
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control" id="nameTextBox" placeholder="Enter name" />
-            </div>
-            <div class="form-group">
-                <label>Address</label>
-                <input type="text" class="form-control" id="addressTextBox" placeholder="Enter address" />
-            </div>
-            <button type="submit" id="saveShoppingListButton" class="btn btn-primary">Save</button>
-        </form>
+        </ul>
+
 
     </div>
 
@@ -59,7 +51,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <script src="add-shopping-list.js"></script>
+    <script src="view-all-shopping-lists.js"></script>
 </body>
 
 </html>
