--- a/client/add-shopping-list.html
+++ b/client/add-shopping-list.html
@@ -29,7 +29,7 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="add-shopping-list.html">Add Shopping List</a>
-                    <a class="nav-item nav-link" href="./add-shopping-list.html">Add Grocery Item</a>
+                    <a class="nav-item nav-link" href="add-grocery-item.html">Add Grocery Item</a>
 
                 </div>
             </div>
