posting grocery items working

--- a/client/add-grocery-item.html
+++ b/client/add-grocery-item.html
@@ -27,7 +27,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="view-all-shopping-lists.html">Home</a>
                     <a class="nav-item nav-link" href="add-shopping-list.html">Add Shopping List</a>
                     <a class="nav-item nav-link" href="add-grocery-item.html">Add Grocery Item</a>
 
